Nome do fornecedor explicido

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "require": {
     
     },
+    "config": {
+        "vendor-dir": "vendor"
+    },
     "autoload": {
         "psr-4": {
             "Source\\": "source/"
