--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.2",
-        "developercielo/api-3.0-php": "^1.0"
+        "php": "^7.2"
     },
     "config": {
         "vendor-dir": "vendor"
